@@ -1761,6 +1761,9 @@ Release 2.8.0 - UNRELEASED
     HDFS-9535. Newly completed blocks in IBR should not be considered
     under-replicated too quickly. (Mingliang Liu via jing9)
 
+    HDFS-8894. Set SO_KEEPALIVE on DN server sockets.
+    (Kanaka Kumar Avvaru via wang)
+
   OPTIMIZATIONS
 
     HDFS-8026. Trace FSOutputSummer#writeChecksumChunks rather than
